# cocktail-cache

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  diagrams.md  pyproject.toml  render.yaml  tasks.md
.github/workflows/: ci-cd.yml
.serena/: project.yml
.serena/memories/: bar-management-rewrite.md  drinks-dataset-expansion.md
data/: cocktails.json  ingredients.json  mocktails.json  substitutions.json  unlock_scores.json
docs/: BLUEPRINT.md  CRASH-COURSE.md  api.md  architecture-raja-chat.md  architecture.md  implementation-guide.md  playwright.md  product.md  tasks.md  ux-improvements.md
docs/design/: parallel-crew-execution.md  suggest-bottle.md  ux-improvements.md
docs/designs/: raja-tools-integration.md
scripts/: compute_unlock_scores.py  validate_data.py
src/: __init__.py
src/app/: __init__.py  config.py  main.py  rate_limit.py
src/app/agents/: __init__.py  bar_growth_advisor.py  bottle_advisor.py  cabinet_analyst.py  drink_recommender.py  llm_config.py  mood_matcher.py  raja_bartender.py  recipe_writer.py
src/app/crews/: __init__.py  analysis_crew.py  bar_growth_crew.py  raja_chat_crew.py  recipe_crew.py
src/app/flows/: __init__.py  cocktail_flow.py
src/app/models/: __init__.py  cabinet.py  chat.py  cocktail.py  config.py  crew_io.py  drinks.py  history.py  ingredients.py  recipe.py  user_prefs.py  (+2 more)
tests/: __init__.py  conftest.py  test_rate_limiting.py
tests/agents/: __init__.py  test_agents.py  test_raja_bartender.py
tests/crews/: __init__.py  test_analysis_crew.py  test_raja_chat_crew.py  test_recipe_crew.py
tests/features/: __init__.py
tests/flows/: __init__.py  test_cocktail_flow.py
tests/integration/: __init__.py  test_flow_api.py
tests/models/: test_chat_models.py  test_models.py
tests/routers/: test_api.py
tests/services/: test_data_loader.py  test_drink_data.py
tests/tools/: __init__.py  test_tools.py
tests/utils/: test_parsing.py
(+35 files in other folders)
